# Duplicate-File-Finder

./: .gitignore  CMakeLists.txt  README.md  main.cpp  matcher.hpp  scanner.hpp  sha1.hpp  utilities.hpp
